--- a/templates/home.html
+++ b/templates/home.html
@@ -4,63 +4,118 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saran Pannasuriyaporn</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="icon" href="https://github.com/wallik2/SaranPannasuriyaporn/blob/master/static/pic/sar3.jpg?raw=true">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
   <style>
-    section{
-      padding: 60px 0;
-    }
+    section{ padding: 60px 0;}
   </style>
 </head>
 <body>
+    <div class="container-fluid px-2 pb-5 bg-gray">
+        <div class='row'>
+          <div class='col-md-2'>
+            <a href="/">
+                <img src="static\pic\sar3.jpg" alt="me" class="rounded-circle" width="150" height="150">
+            </a>
+          </div>
+  
+          <div class='col-md-6'>
+              <span class='text-big-bold'>Saran Pannasuriyaporn</span>
+            <p class='display-6 lead text-muted'>Data Scientist Student at Mahidol U.</p>
+            <span>
+                <a href="https://github.com/wallik2">
+                    <img src="static\pic\Github.png" alt="" class="rounded-circle" width="50" height="50">
+                </a>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-grass">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="#">Hidden brand</a>
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+                <a href="https://www.youtube.com/channel/UCDJ1y-YCpuZudh_S4wXYjpA">
+                    <img src="static\pic\Youtube.png" alt="" class="rounded-circle" width="50" height="50">
+                </a>
+                
+                <a href="https://www.linkedin.com/in/saran-pannasuriyaporn-1104071ab/">
+                    <img src="static\pic\Linkedin.png" alt="" class="rounded-circle" width="70" height="70">
+                </a>
+            </span>
+          </div>
+        </div>
+      </div>
+  
+  <!--Nav-->
+  <!--preserve the area for nav-->
+  <!--expand the collapse for lg screen-->
+  <nav class="navbar navbar-expand-md navbar-light bg-grass">
+    <div class="container-fluid">
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+
+      <!--toggle for mobile screen
+      (id=navbarNav) since collapese from the above to this class-->
+
+      <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Project
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Utility</a></li>
+                <li><a class="dropdown-item" href="#">Natural Language Processing</a></li>
+                <li><a class="dropdown-item" href="#">Time Series Analysis</a></li>
+                <li><a class="dropdown-item" href="#">Statistical modeling</a></li>
+                <li><a class="dropdown-item nav-link disabled" href="#">  Computer Vision</a></li>
+                </ul>
+            </li>
+
+            <li>
+                <a class="nav-link" aria-current="page" href="#">Certificate</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Resume</a>
+            </li>
+        </ul>
+
+      </div>
+
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="bi bi-house-door"></i>
+              </a>
+            </li>
+        </ul>
+      </div>
+
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">Timeline</a>
+            </li>
+
+            <!--Don't show this nav item ('Pricing') in Mobile-->
+            <li class="nav-item d-none d-md-inline">
+              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Support me</a>  
+            </li>
+          </ul>
+      </div>
+
     </div>
   </nav>
 
-    <div class="container-fluid px-2 pb-5">
-      <div class='row'>
-        <div class='col-md-2'>
-          <img src="static\pic\sar3.jpg" alt="me" class="rounded-circle" >
-        </div>
 
-        <div class='col-md-4'>
-            <span class='text-big-bold'>Saran Pannasuriyaporn</span>
-          <p class='display-6 lead text-muted'>Data Scientist Student at Mahidol U.</p>
-          <span>
-            <img src="static\pic\Github.png" alt="" class="rounded-circle" width="50" height="50">
-            <img src="static\pic\Youtube.png" alt="" class="rounded-circle" width="50" height="50">
-            <img src="static\pic\Linkedin.png" alt="" class="rounded-circle" width="70" height="70">
-
-
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <!-- Image and text -->
-
+ <!--main img & intro text-->
+ <section id="intro" class="bg-gray">
+  <div class="container-lg bg-white p-5">
+    <p>welcome to my personal website, </p>
+  </div>
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
