--- a/templates/layout.html
+++ b/templates/layout.html
@@ -85,7 +85,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="/">
                 <i class="bi bi-house-door"></i>
               </a>
             </li>
